cleaning up, trying to setup the proxy for fiddler

--- a/AXTemplateGenerator.Forms/app.config
+++ b/AXTemplateGenerator.Forms/app.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <system.serviceModel>
+  <system.net>
+    <defaultProxy>
+      <proxy
+              
+              usesystemdefault="False"
+              bypassonlocal="True"
+              proxyaddress="http://127.0.0.1:8888"
+              />
+    </defaultProxy>
+  </system.net>
+
+
+  <system.serviceModel>
         <bindings>
             <netTcpBinding>
                 <binding name="MetadataServiceEndpoint" closeTimeout="00:01:00"
@@ -21,12 +33,9 @@
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://dbserver01:8201/DynamicsAx/Services/MetadataService"
+            <endpoint address="http://localhost:8201/DynamicsAx/Services/MetadataService"
                 binding="netTcpBinding" bindingConfiguration="MetadataServiceEndpoint"
                 contract="AX.AIF.SystemServices.IAxMetadataService" name="MetadataServiceEndpoint">
-                <identity>
-                    <servicePrincipalName value="host/DBSERVER01.CAD-MTL" />
-                </identity>
             </endpoint>
         </client>
     </system.serviceModel>
